Bug 238698 - opening a popup from ikea site triggers DOM::DocumentImpl::close(): Assertion `!parsing()'
Summary: opening a popup from ikea site triggers DOM::DocumentImpl::close(): Assertion...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR grave
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 241166 244956 246746 250757 251948 253744 254757 255405 256123 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-24 17:16 UTC by Tommi Tervo
Modified: 2010-11-28 16:53 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.4
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (22.23 KB, text/plain)
2010-08-07 07:15 UTC, Andrey Borzenkov
Details
New crash information added by DrKonqi (16.07 KB, text/plain)
2010-08-23 22:23 UTC, Marcos Dione
Details
I think is the 'urban dictionary' link (33.58 KB, text/plain)
2010-08-23 22:26 UTC, Marcos Dione
Details
New crash information added by DrKonqi (13.38 KB, text/plain)
2010-09-30 18:19 UTC, Marcos Dione
Details
New crash information added by DrKonqi (22.36 KB, text/plain)
2010-10-13 16:40 UTC, András Manţia
Details
New crash information added by DrKonqi (18.51 KB, text/plain)
2010-11-28 11:42 UTC, Jure Repinc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tommi Tervo 2010-05-24 17:16:38 UTC
Version:           SVN (using Devel) 
OS:                Linux

seems that r1097846 caused a regression:

konqueror: /home/teve/kde/kdelibs/khtml/xml/dom_docimpl.cpp:1652: virtual void DOM::DocumentImpl::close(): Assertion `!parsing()' failed.



Reproducible: Always

Steps to Reproduce:
open e.g. http://www.ikea.com/fi/fi/catalog/products/00111994
and click shelf picture



OS: Linux (i686) release 2.6.31.12-0.2-default
Compiler: gcc
Comment 1 Tommi Tervo 2010-08-05 10:45:59 UTC
*** Bug 241166 has been marked as a duplicate of this bug. ***
Comment 2 Tommi Tervo 2010-08-05 10:46:17 UTC
*** Bug 246746 has been marked as a duplicate of this bug. ***
Comment 3 Andrey Borzenkov 2010-08-07 07:15:04 UTC
Created attachment 49897 [details]
New crash information added by DrKonqi

konqueror (4.4.95 (KDE 4.4.95 (KDE 4.5 >= 20100723))) on KDE Platform 4.5.00 (KDE 4.5.0) using Qt 4.7.0

- What I was doing when the application crashed:

Opened mail thread on osdir in separate TAB. Regarding crash stack:

void DocumentImpl::close(  )
{
    if (parsing() && hasVariableLength() && m_tokenizer) {
        m_tokenizer->finish();
        assert(!parsing()); <== line 1656

-- Backtrace (Reduced):
#9  0x00007ff3b2e3467e in DOM::DocumentImpl::close (this=0x4864880) at /usr/src/debug/kdelibs-4.5.0/khtml/xml/dom_docimpl.cpp:1656
#10 0x00007ff3b2e9aeb8 in DOM::HTMLDocumentImpl::close (this=0x4864880) at /usr/src/debug/kdelibs-4.5.0/khtml/html/html_documentimpl.cpp:232
#11 0x00007ff3b3001869 in KJS::HTMLDocFunction::callAsFunction (this=0x7ff3adca0140, exec=0x7fff35f74bb0, thisObj=0x7ff3b394fa40, args=...) at /usr/src/debug/kdelibs-4.5.0/khtml/ecma/kjs_html.cpp:121
#12 0x00007ff3b26fd089 in KJS::Machine::runBlock (exec=0x7fff35f74bb0, codeBlock=<value optimized out>, parentExec=<value optimized out>) at codes.def:1204
#13 0x00007ff3b26b0765 in KJS::FunctionBodyNode::execute (this=0x487e390, exec=0x7fff35f74bb0) at /usr/src/debug/kdelibs-4.5.0/kjs/nodes.cpp:927
Comment 4 Nicolas L. 2010-08-12 18:12:27 UTC
*** Bug 244956 has been marked as a duplicate of this bug. ***
Comment 5 Marcos Dione 2010-08-23 22:23:04 UTC
Created attachment 50872 [details]
New crash information added by DrKonqi

konqueror (4.5.64 (KDE 4.5.64 (KDE 4.6 >= 20100811))) on KDE Platform 4.5.64 (KDE 4.5.64 (KDE 4.6 >= 20100811)) using Qt 4.6.3

- What I was doing when the application crashed:

visiting an unrelated site (I can't find it among the tens of tabs I have open in konqueror). my saved state is attached.

-- Backtrace (Reduced):
#11 0xb0f16f17 in DOM::DocumentImpl::close (this=0xf386f30) at /home/mdione/src/system/kde4/kdelibs/khtml/xml/dom_docimpl.cpp:1656
#12 0xb0f93eb0 in DOM::HTMLDocumentImpl::close (this=0xf386f30) at /home/mdione/src/system/kde4/kdelibs/khtml/html/html_documentimpl.cpp:232
#13 0xb1141d0d in KJS::HTMLDocFunction::callAsFunction (this=0xabd1bec0, exec=0xbf9a439c, thisObj=0xabd1bf00, args=...) at /home/mdione/src/system/kde4/kdelibs/khtml/ecma/kjs_html.cpp:121
#14 0xb117808d in KJS::JSObject::call (this=0xabd1bec0, exec=0xbf9a439c, thisObj=0xabd1bf00, args=...) at /home/mdione/src/system/kde4/kdelibs/kjs/object.h:616
#15 0xb0cd3afd in KJS::Machine::runBlock (exec=0xbf9a439c, codeBlock=..., parentExec=0xbf9a599c) at codes.def:1204
Comment 6 Marcos Dione 2010-08-23 22:26:41 UTC
Created attachment 50873 [details]
I think is the 'urban dictionary' link
Comment 7 David Faure 2010-09-21 16:12:19 UTC
Interestingly, I had the same assert on  http://www.linuxforu.com/previews/subversion-16-security-improvements-illustrated/ with 4.5 branch, but it works in trunk. However Tommi says the ikea link still crashes in trunk...
Comment 8 Maksim Orlovich 2010-09-23 18:57:15 UTC
Regression from r1097846. spart, any comments if you're around? 
I don't really understand the logic in ::close(), and the assert in 
particular --- e.g. finish() would not stop parsing if a script it running,
at least..
Comment 9 Maksim Orlovich 2010-09-23 18:57:53 UTC
*** Bug 251948 has been marked as a duplicate of this bug. ***
Comment 10 Maksim Orlovich 2010-09-23 18:58:08 UTC
*** Bug 250757 has been marked as a duplicate of this bug. ***
Comment 11 Marcos Dione 2010-09-30 18:19:58 UTC
Created attachment 52122 [details]
New crash information added by DrKonqi

akregator (1.6.0) on KDE Platform 4.5.70 (4.6 >= 20100927) using Qt 4.6.3

- What I was doing when the application crashed:

I started akregator. it asked me if I wanted to restore the previous session, I clicked on yes.

- Custom settings of the application:

file /home/mdione/.kde/share/apps/akregator/crashed:

link for T5 might not be safe for work.

[Part]
Children=T1,T2,T3,T4,T5,T6
T1_mimetype=text/html
T1_url=http://lateralopinion.disqus.com/making_deployment_of_pyqt_apps_trivial_an_idea/reply.html?f=lateralopinion&t=making_deployment_of_pyqt_apps_trivial_an_idea&ff=Bitstream%20Vera%20Sans&default_text=Type%20your%20comment%20here.&ifrs=&1284446402628#000900000000000000000001
T1_zoom=100
T2_mimetype=text/html
T2_url=http://www.boston.com/bigpicture/2010/09/911_in_2010_remembrance_and_re.html
T2_zoom=100
T3_mimetype=text/html
T3_url=http://www.cad-comic.com/cad/20100929/
T3_zoom=100
T4_mimetype=text/html
T4_url=http://www.penny-arcade.com/comic/2010/9/29/understanding/?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+pa-mainsite+%28Penny+Arcade%29
T4_zoom=100
T5_mimetype=text/html
T5_url=http://www.nickscipio.com/pod/2010/09/29/checklist/?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+POD-NickScipio+%28Picture+of+the+Day+-+NickScipio.com%29
T5_zoom=100
T6_mimetype=text/html
T6_url=http://ars.userfriendly.org/cartoons/?id=20100929
T6_zoom=100
activeChildIndex=0
crashed=true
searchCombo=0
searchLine=

-- Backtrace (Reduced):
#10 0xb4ddb8b8 in __assert_fail (assertion=0xb6e19ff7 "!parsing()", file=0xb6e19c40 "/home/mdione/src/system/kde4/kdelibs/khtml/xml/dom_docimpl.cpp", line=1656, function=0xb6e1aca0 "virtual void DOM::DocumentImpl::close()") at assert.c:81
#11 0xb6a22083 in DOM::DocumentImpl::close (this=0xd0d1ae0) at /home/mdione/src/system/kde4/kdelibs/khtml/xml/dom_docimpl.cpp:1656
#12 0xb6a9f43c in DOM::HTMLDocumentImpl::close (this=0xd0d1ae0) at /home/mdione/src/system/kde4/kdelibs/khtml/html/html_documentimpl.cpp:232
#13 0xb6c4cc91 in KJS::HTMLDocFunction::callAsFunction (this=0xac020d20, exec=0xbfb83634, thisObj=0xac0a3680, args=...) at /home/mdione/src/system/kde4/kdelibs/khtml/ecma/kjs_html.cpp:121
#14 0xb6c83123 in KJS::JSObject::call (this=0xac020d20, exec=0xbfb83634, thisObj=0xac0a3680, args=...) at /home/mdione/src/system/kde4/kdelibs/kjs/object.h:626
Comment 12 Tommi Tervo 2010-10-10 16:08:54 UTC
*** Bug 253744 has been marked as a duplicate of this bug. ***
Comment 13 András Manţia 2010-10-13 16:40:34 UTC
Created attachment 52488 [details]
New crash information added by DrKonqi

konqueror (4.5.71 (4.6 >= 20101005)) on KDE Platform 4.5.71 (4.6 >= 20101005) using Qt 4.7.1

A similar crash  happens also on http://www.progarchives.com/album.asp?id=30966

-- Backtrace (Reduced):
#9  0x00007faf1488c6d4 in DOM::DocumentImpl::close (this=0x9bc0110) at /home/andris/development/sources/kde-trunk/kdelibs/khtml/xml/dom_docimpl.cpp:1656
#10 0x00007faf1490b2ef in DOM::HTMLDocumentImpl::close (this=0x9bc0110) at /home/andris/development/sources/kde-trunk/kdelibs/khtml/html/html_documentimpl.cpp:232
#11 0x00007faf14abba06 in KJS::HTMLDocFunction::callAsFunction (this=0x7faf168f8e00, exec=0x7fffe954c650, thisObj=0x7faf168f9340, args=...)
    at /home/andris/development/sources/kde-trunk/kdelibs/khtml/ecma/kjs_html.cpp:121
#12 0x00007faf14aec57e in KJS::JSObject::call (this=0x7faf168f8e00, exec=0x7fffe954c650, thisObj=0x7faf168f9340, args=...) at /home/andris/development/sources/kde-trunk/kdelibs/kjs/object.h:626
#13 0x00007faf140f7aee in KJS::Machine::runBlock (exec=0x7fffe954c650, codeBlock=..., parentExec=0x0) at codes.def:1204
Comment 14 Tommi Tervo 2010-10-20 17:52:34 UTC
*** Bug 254757 has been marked as a duplicate of this bug. ***
Comment 15 Tommi Tervo 2010-10-27 17:02:04 UTC
*** Bug 255405 has been marked as a duplicate of this bug. ***
Comment 16 Tommi Tervo 2010-11-05 16:23:28 UTC
*** Bug 256123 has been marked as a duplicate of this bug. ***
Comment 17 Jure Repinc 2010-11-28 11:42:27 UTC
Created attachment 53822 [details]
New crash information added by DrKonqi

konqueror (4.5.80 (4.6 Beta1)) on KDE Platform 4.5.80 (4.6 Beta1) using Qt 4.7.1

- What I was doing when the application crashed:

Opened the web page http://ostatic.com/blog/whats-coming-in-mandriva-2011

-- Backtrace (Reduced):
#9  0x00007fabcfabf47d in DOM::DocumentImpl::close (this=0xac40e60) at /usr/src/debug/kdelibs-4.5.80/khtml/xml/dom_docimpl.cpp:1656
#10 0x00007fabcfb24cf8 in DOM::HTMLDocumentImpl::close (this=0xac40e60) at /usr/src/debug/kdelibs-4.5.80/khtml/html/html_documentimpl.cpp:221
#11 0x00007fabcfc6c26e in KJS::HTMLDocFunction::callAsFunction (this=0x7fabc97ef2c0, exec=0x7ffff8bdcf60, thisObj=0x7fabc97f0900, args=...)
    at /usr/src/debug/kdelibs-4.5.80/khtml/ecma/kjs_html.cpp:121
#12 0x00007fabcf389760 in KJS::Machine::runBlock (exec=0x7ffff8bdcf60, codeBlock=..., parentExec=0x0) at codes.def:1204
#13 0x00007fabcf33fd5e in KJS::FunctionBodyNode::execute (this=0x771c890, exec=0x7ffff8bdcf60) at /usr/src/debug/kdelibs-4.5.80/kjs/nodes.cpp:927
Comment 18 Maksim Orlovich 2010-11-28 16:47:03 UTC
SVN commit 1201753 by orlovich:

Get rid of this assert. It's wrong in case this is done from a running script.
BUG: 238698
FIXED-IN: 4.5.4


 M  +0 -1      dom_docimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201753
Comment 19 Maksim Orlovich 2010-11-28 16:51:19 UTC
SVN commit 1201755 by orlovich:

Merged revision:r1201753 | orlovich | 2010-11-28 10:47:00 -0500 (Sun, 28 Nov 2010) | 4 lines

Get rid of this assert. It's wrong in case this is done from a running script.
BUG: 238698
FIXED-IN: 4.5.4

 M  +0 -1      dom_docimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201755
Comment 20 Maksim Orlovich 2010-11-28 16:53:12 UTC
Hmm, might have missed 4.5.4, actually. Will check with rt..