Merged revision:r1201753 | orlovich | 2010-11-28 10:47:00 -0500 (Sun, 28 Nov 2010) | 4 lines

Get rid of this assert. It's wrong in case this is done from a running script.
BUG: 238698
FIXED-IN: 4.5.4

svn path=/branches/KDE/4.5/kdelibs/; revision=1201755